[package]
name = "bnl"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
miniz_oxide = "0.8.9"
num_enum = "0.7.4"

bcndecode = "0.2"
png = "0.17.16"
texpresso = "2.0.2"
indexmap = "2.11.0"
mod3d-gltf = "0.3.0"
base64 = "0.22.1"
mod3d-base = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0.145"
gltf_writer = { version = "0.1.0", path = "../gltf_writer" }

[lib]
name = "bnl"
path = "src/lib.rs"

[[bin]]
name = "bnltool"
path = "src/bin/main.rs"
