[package]
name = "bnl"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
miniz_oxide = "0.8.9"
num_enum = "0.7.4"

bcndecode = "0.2"
png = "0.17.16"
texpresso = "2.0.2"
indexmap = "2.11.0"
base64 = "0.22.1"

serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }

gltf_writer = { version = "0.1.0", git = "https://github.com/luboise/gltf_writer" }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5.0"
bincode = { version = "2.0.1", features = ["serde"] }
wavers = "1.5.1"
ntest = "0.9.3"

[lib]
name = "bnl"
path = "src/lib.rs"

[[bin]]
name = "bnltool"
path = "src/bin/bnltool.rs"
